# siren-detector

./: .gitignore  pyproject.toml  run_demo.sh
app/: index.html  main.js  package-lock.json  package.json  server.js  style.css
drupend/: pyproject.toml
drupend/AI/: Training_Functions  create_model.py  middleman.py  trainer.py  training.py
drupend/ai/: create_model.py
drupend/src/: live_detector.py  server.py
drupend/src/siren_detector/ai/: create_model.py  middleman.py  trainer.py
siren-detector/: index.html  package-lock.json  package.json
src/siren_detector/: record_dataset.py
