[project]
name = "siren-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyaudio (>=0.2.14,<0.3.0)",
    "tflite-runtime (>=2.14.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)"
]

[tool.poetry]
packages = [{include = "siren_detector", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
